--- a/.github/workflows-template/ollama.yml
+++ b/.github/workflows-template/ollama.yml
@@ -22,6 +22,8 @@ jobs:
           python-version: '3.x'
       - name: Setup Library
         run: |
+          sudo apt-get update
+          sudo apt-get install -y libxml2-dev libxslt1-dev
           ollama create extractor -f ./Modelfile
           pip install -r requirements.txt
           playwright install
