--- a/.github/workflows/ollama.yml
+++ b/.github/workflows/ollama.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
       - name: Setup Ollama
         uses: ai-action/setup-ollama@v1
       - name: Setup Python
